# dynamic-visualisations

./: .ghci  TODO.md  dynamic-visualisations.cabal  stack.yaml
src/: Backend.hs  Main.hs
src/Widgets/: Expression.hs  Record.hs  Type.hs
